Enforce v2.0-only product and licensing scope